Fix nav items layout: use flex: 0 1 auto on navbar-collapse to prevent stretching

--- a/src/header-fix.css
+++ b/src/header-fix.css
@@ -117,7 +117,7 @@
   .navbar-collapse {
     display: flex !important;
     align-items: center;
-    flex: 1;
+    flex: 0 1 auto;
     position: static !important;
     width: auto !important;
     height: auto !important;
@@ -130,7 +130,7 @@
     flex-direction: row;
     align-items: center;
     margin-left: 0;
-    margin-right: auto;
+    margin-right: 0;
   }
 
   .navbar-nav .nav-item {
